@@ -1,6 +1,9 @@
 LIST OF CHANGES
 ---------------
 
+ - allow to store longer composition JSON strings in the iseq_product_metrics
+   table
+
 release 5.0
  - added target autosome fields to iseq_product_metrics
  - added DBIx binding for the bmap_flowcell table for the
